# vole-machine

./: CMakeLists.txt  CPU.cpp  CPU.h  CU.cpp  CU.h  Untitled Diagram.drawio  helperFunctions.cpp  helperFunctions.h  machine.h  machinesimulator.cpp  machinesimulator.h  machinesimulator.ui  main.cpp  mainMemorey.cpp  mainMemorey.h  memoryUnit.cpp  volemachine.cpp  volemachine.h
CPU/: CPU.cpp  CPU.h
CU/: CU.cpp  CU.h
mainMemory/: mainMemorey.cpp  mainMemorey.h  memoryUnit.cpp  memoryUnit.h
volemachien/: voleMachine.cpp  voleMachine.h
