cmake_minimum_required(VERSION 3.27)
project(untitled9)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled9 main.cpp
        CPU/CPU.cpp
        CPU/CPU.cpp
        mainMemory/mainMemorey.cpp
        mainMemory/mainMemorey.cpp
        mainMemory/memoryUnit.cpp
        volemachien/voleMachine.cpp
        helperFunctions.cpp
        CU/CU.cpp)
